deploy 2017/04/21. 1. fix js not work on ie11 and old mobile browser. 2. make image figure slightly wider. 3. main nav background slighly transparent. 4. remove margin between figure caption and image.

--- a/css/main.css
+++ b/css/main.css
@@ -154,7 +154,7 @@ body > header {
     color: #000; }
   body > header img.logo {
     position: absolute;
-    background: #FFF;
+    background: rgba(255, 255, 255, 0.86);
     border: 1px solid #cccccc;
     top: 1em;
     left: 1em;
@@ -163,7 +163,7 @@ body > header {
     z-index: 6; }
   body > header > .menu-icon-wrapper {
     position: absolute;
-    background: #FFF;
+    background: rgba(255, 255, 255, 0.86);
     border: 1px solid #cccccc;
     top: 1em;
     width: 1.6em;
@@ -212,7 +212,7 @@ body > header {
       overflow: hidden; }
     body > header nav > ul {
       position: absolute;
-      background: #FFF;
+      background: rgba(255, 255, 255, 0.86);
       border: 1px solid #cccccc;
       top: 1em;
       position: relative;
@@ -244,7 +244,7 @@ body > .page-center > footer {
     body > .page-center > footer p a:visited {
       color: #5aacf9; }
 
-@media screen and (min-width: 720px) and (max-width: 1000px) {
+@media screen and (min-width: 720px) and (max-width: 1019px) {
   body > .page-center {
     top: 14.5em; } }
 @media all and (min-width: 720px) {
@@ -276,7 +276,7 @@ body > .page-center > footer {
       body > header nav ul {
         border-style: none;
         position: static;
-        background: #FFF;
+        background: rgba(255, 255, 255, 0.86);
         margin: 0;
         height: 3.2em;
         font-size: 1.2em;
@@ -318,7 +318,11 @@ body > .page-center > footer a, .article a, #page-nav a {
     object-position: center center; }
   .gallery img {
     opacity: 0;
-    transition: opacity cubic-bezier(0.4, 0, 1, 1) 1s; }
+    -webkit-transition: all cubic-bezier(0.11, 1.11, 1, 1) 0.65s;
+    -moz-transition: all cubic-bezier(0.11, 1.11, 1, 1) 0.65s;
+    -ms-transition: all cubic-bezier(0.11, 1.11, 1, 1) 0.65s;
+    -o-transition: all cubic-bezier(0.11, 1.11, 1, 1) 0.65s;
+    transition: all cubic-bezier(0.11, 1.11, 1, 1) 0.65s; }
   .gallery .bg-img {
     width: 100%;
     height: 100%;
@@ -330,7 +334,8 @@ body > .page-center > footer a, .article a, #page-nav a {
   position: absolute;
   width: 100%;
   height: 100%;
-  text-align: center; }
+  text-align: center;
+  overflow: hidden; }
   .gallery-middle-info-wrap .middle-info-content {
     position: relative;
     z-index: 2;
@@ -456,10 +461,12 @@ body > .page-center > footer a, .article a, #page-nav a {
           content: "—";
           padding: 0 0.3em; }
     .article .article-body .figure {
-      text-align: center; }
+      text-align: center;
+      margin: 0 -1.2em; }
       .article .article-body .figure img {
         max-width: 100%; }
       .article .article-body .figure .caption {
+        margin-top: 0;
         font-size: 0.85em;
         color: #7d838b; }
     .article .article-body .footnoteRef {
@@ -520,6 +527,9 @@ body > .page-center > footer a, .article a, #page-nav a {
     padding-left: 1.4em;
     padding-right: 1.4em;
     border-width: 1.6em; } }
+@media all and (min-width: 1020px) {
+  .article .figure {
+    margin: 0 -2.4em; } }
 @font-face {
   font-family: my-sans-serif-en;
   font-style: normal;
